<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_group_con"
        android:title="@string/title_group" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_board_con"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_counter"
        android:icon="@drawable/ic_counter_con"
        android:title="@string/title_counter" />

    <item
        android:id="@+id/navigation_option"
        android:icon="@drawable/ic_option"
        android:title="@string/title_option" />

</menu>